markers not exit from border, correct uneven sections #2

--- a/src/blocks/alone-calendar/alone-calendar.scss
+++ b/src/blocks/alone-calendar/alone-calendar.scss
@@ -41,7 +41,7 @@
     left: -30px;
     z-index: 99;
 
-    @media (max-width: 700px) {
+    @media (max-width: 840px) {
       left: 0;
     }
   }
