--- a/src/blocks/footer-nav-menu/footer-nav-menu.scss
+++ b/src/blocks/footer-nav-menu/footer-nav-menu.scss
@@ -43,5 +43,9 @@
 
   &__item {
     margin-bottom: 20px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
 }
