--- a/src/blocks/footer/footer.scss
+++ b/src/blocks/footer/footer.scss
@@ -19,6 +19,7 @@
 
     @media (max-width: 768px) {
       display: flex;
+      box-shadow: none;
     }
   }
 
@@ -95,7 +96,7 @@
     display: flex;
     justify-content: space-between;
     margin: 0 auto;
-    padding: 100px 0 70px;
+    padding: 100px 0 89px;
     line-height: 15px;
 
     @media (max-width: 1200px) {
