--- a/src/blocks/room-info/room-info.scss
+++ b/src/blocks/room-info/room-info.scss
@@ -22,7 +22,7 @@
       max-width: 370px;
     }
 
-    @media (max-width: 375px) {
+    @media (max-width: 400px) {
       max-width: 270px;
     }
   }
