--- a/src/pages/website-pages/index/style.scss
+++ b/src/pages/website-pages/index/style.scss
@@ -1,7 +1,6 @@
 @import '@variables';
 
 .index-main {
-  height: 830px;
   line-height: 24px;
   position: relative;
   
