--- a/src/pages/website-pages/room-details/room-details.scss
+++ b/src/pages/website-pages/room-details/room-details.scss
@@ -16,7 +16,7 @@
   }
 
   &__first-orders {
-    margin-right: 100px;
+    margin: 0 100px 0 11px;
 
     @media (max-width: 720px) {
       margin-right: 0;
