--- a/src/pages/website-pages/search-room/search-room.scss
+++ b/src/pages/website-pages/search-room/search-room.scss
@@ -16,7 +16,7 @@
     margin: 0 auto;
 
     @media (max-width: 905px) {
-      margin: 0 30px;
+      margin: 0 auto;
     }
   }
 
@@ -37,7 +37,7 @@
     width: 266px;
     margin: 30px 0;
 
-    @media (max-width: 700px) {
+    @media (max-width: 840px) {
       width: 100%;
     }
   }
@@ -139,7 +139,7 @@
     width: 100%;
   }
 
-  @media (max-width: 700px) {
+  @media (max-width: 840px) {
     flex-direction: column;
   }
 }
